# aPList

./: .gitignore  CMakeLists.txt  README.md  aPlist.desktop  plan.md
src/: app.cpp  app.hpp  database.cpp  database.hpp  form_manager.cpp  form_manager.hpp  fuel_math.cpp  fuel_math.hpp  main.cpp  models.hpp  theme_manager.cpp  theme_manager.hpp
themes/: dark.json  forest.json  light.json  ocean.json  sunset.json
